# cg25-group25

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  README.md
include/: Animator.hpp  Application.hpp  BufferManager.hpp  CommandManager.hpp  FSR2Pass.hpp  FileUtils.hpp  FreeCamera.hpp  FrustumCulling.hpp  GLTFLoader.hpp  ImageManager.hpp  PostProcessingStack.hpp  RayQueryPipeline.hpp  ResourceManager.hpp  Scene.hpp  Shader.hpp  SharedTypes.hpp  SwapChain.hpp  VulkanCore.hpp  constants.hpp  structs.hpp  vulkan_transfer_context.hpp
include/pch/: pch_glm.hpp  pch_vulkan.hpp
include/utils/: buffer_utils.hpp  file_utils.hpp  image_utils.hpp  logical_device_utils.hpp  physical_device_utils.hpp  shader_utils.hpp  swap_chain_utils.hpp  window_utils.hpp
resources/: README.md
shaders/: frag.frag  fragment_shader.frag.slang  vert.vert  vertex_shader.vert.slang
shaders/common/: constants.slang  parameters.slang  types.slang
shaders/postprocessing/: bloom_params.slang  bright_pass.frag.slang  composite.frag.slang  composite_test.frag.slang  fullscreen.vert.slang  gaussian_blur.frag.slang  hdr.frag.slang  taa.frag.slang
shaders/shading/: brdf.slang  pbr.slang
src/: Animator.cpp  Application.cpp  Application.h  BufferManager.cpp  Camera.cpp  CommandManager.cpp  FSR2Pass.cpp  FileUtils.cpp  GLTFLoader.cpp  GLTFLoader.h  ImageManager.cpp  PostProcessingStack.cpp  RayQueryPipeline.cpp  Renderer.cpp  Renderer.hpp  ResourceManager.cpp  SceneObject.hpp  Shader.cpp  SimpleRenderer.cpp.back  SimpleRenderer.h.bak  SwapChain.cpp  VulkanCore.cpp  gltf.cpp  loader.hpp  main.cpp
